# dlibs

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  CodeCoverage.cmake  Description.dox  Doxyfile.cmake  FindDlibs.cmake  FindLibcurl.cmake  FindMySQL.cmake  FindPcreCpp.cmake  README.md  config.h.cmake  dappcmdline.cpp  dappcmdline.h  ddatabase.cpp  ddatabase.h  devent.cpp  devent.h  dexception.h  dfactory.h  dlibstest.cpp  dlog.cpp  dlog.h  dmysql.cpp  dmysql.h  dpgsql.h  dpoint.h  dprocess.cpp  dprocess.h  dprototype.h  dsettings.cpp  dsettings.h  dsingleton.h  dskeleton.h  dsmtp.cpp  dsmtp.h  dsocket.cpp  dsocket.h  dsqlite.cpp  (+20 more)
src/: CMakeLists.txt  client.cpp  config.h.cmake  dappcmdline.cpp  dappcmdline.dox  dappcmdline.h  dbase64.cpp  dbase64.h  ddatabase.cpp  ddatabase.h  denv.cpp  denv.dox  denv.h  devent.cpp  devent.h  dexception.dox  dexception.h  dfactory.cpp  dfactory.dox  dfactory.h  dimap.cpp  dimap.dox  dimap.h  dlibs.h.cmake  dlibspath.cpp  dlibstest.cpp  dlog.cpp  dlog.dox  dlog.h  dmail.cpp  dmail.h  dmysql.cpp  dmysql.dox  dmysql.h  dobs.cpp  dobs.dox  dobs.h  dpgsql.cpp  dpgsql.dox  dpgsql.h  (+44 more)
tests/: CMakeLists.txt  test.h.cmake  testdappcmdline.cpp  testdappcmdline.h  testdbase64.0.txt  testdbase64.2.txt  testdbase64.cpp  testdbase64.h  testdenv.cpp  testdenv.h  testdevent.cpp  testdevent.h  testdexception.cpp  testdexception.h  testdfactory.cpp  testdfactory.h  testdimap.cpp  testdimap.h  testdlog.cpp  testdlog.h  testdmail.cpp  testdmail.h  testdmysql.cpp  testdmysql.h  testdobs.cpp  testdobs.h  testdpgsql.cpp  testdpgsql.h  testdpoint.cpp  testdpoint.h  testdprocess.cpp  testdprocess.h  testdprototype.cpp  testdprototype.h  testdrect.cpp  testdrect.h  testdsettings.cpp  testdsettings.h  testdsingleton.cpp  testdsingleton.h  (+14 more)
